[package]
name = "examples"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
# members = ["crates/*"]
members = ["crates/bevy_reactor"]

[workspace.dependencies]
# bevy = { version = "0.15.0-dev", features = ["ghost_nodes"] }
bevy = { git = "https://github.com/cart/bevy.git", version = "0.19.0-dev", branch = "next-generation-scenes", features = [
  "dynamic_linking",
  "ghost_nodes",
  "experimental_bevy_feathers",
  "file_watcher",
] }
bevy_reactor = { path = "crates/bevy_reactor" }
# bevy_reactor_formulae = { path = "crates/bevy_reactor_formulae" }
bevy_reactor_gizmoids = { path = "crates/bevy_reactor_gizmoids" }
# bevy_reactor_nodegraph = { path = "crates/bevy_reactor_nodegraph" }
# bevy_reactor_prop_inspect = { path = "crates/bevy_reactor_prop_inspect" }
smol_str = "0.3.2"

[dependencies]
bevy = { workspace = true }
# bevy-inspector-egui = "0.35.0"
bevy_reactor = { workspace = true }
# bevy_reactor_formulae = { workspace = true }
bevy_reactor_gizmoids = { workspace = true }
# bevy_reactor_nodegraph = { workspace = true }
# bevy_reactor_prop_inspect = { workspace = true }
smol_str = { workspace = true }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
